# shodan-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
hooks/: pre-commit
shodan-api/: Cargo.toml
shodan-api/src/: lib.rs
shodan-api/src/model/: mod.rs  search_ip.rs
shodan-cli/: Cargo.toml
shodan-cli/src/: main.rs
shodan-cli/src/presentation/: command.rs  mod.rs  search.rs
template-api/: Cargo.toml
template-api/src/: lib.rs
template-cli/: Cargo.toml
template-cli/src/: main.rs
template-cli/src/presentation/: command.rs
