[package]
name = "template-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
console = "0.15.7"
env_logger = "0.10.0"
log = "0.4.18"
reqwest = "0.11.18"
structopt = "0.3.26"
tokio = { version = "1.28.2", features = ["full"] }
template-api = { path = "../template-api" }